# dextrade

./: .gitignore  Cargo.toml
dextrade/: Cargo.toml  README.md  default_config.toml
dextrade/src/: binance.rs  config.rs  dex_error.rs  main.rs  runner.rs
jupiter-swap-api-client/: Cargo.toml
jupiter-swap-api-client/src/: lib.rs  quote.rs  route_plan_with_metadata.rs  swap.rs  transaction_config.rs
jupiter-swap-api-client/src/serde_helpers/: option_field_as_string.rs
utils/: Cargo.toml
utils/src/: lib.rs
