[workspace]
members = [
    "jupiter-swap-api-client",
    "dextrade",
    "utils"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
solana-sdk = { version = "2.2.1", features = ["default"] }
solana-client = "2.2.1"
solana-account-decoder = "2.2.1"
reqwest = { version = "0.12.12", features = ["json"] }