[package]
name = "dextrade"
version = "0.1.0"
description = ""
edition = { workspace = true }

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
jupiter-swap-api-client = { path = "../jupiter-swap-api-client" }
utils = { path = "../utils" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
bincode = "1.3.3"
docopt = "1"
serde = { version = "1.0.198", features = ["derive"] }
serde-this-or-that = "0.4"
serde_json = "1.0.116"
log = "0.4.20"
config-file = "0.2.3"
pkg-config = "0.3.31"
reqwest = { workspace = true }
#spl-token = "7.0.0"

