[package]
name = "jupiter-swap-api-client"
version = "0.1.0"
description = ""
edition = { workspace = true }

[dependencies]
anyhow = "1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
base64 = "0.22.1"
serde_qs = "0.14.0"
reqwest = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
rust_decimal = "1.36.0"